modules/security/oidc-proxy/base/resources/workloads/oidc-proxy/configs/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-oidc-proxy
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  # Connect to the DNS service inside the kube-system namespace
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchExpressions:
        - key: k8s-app
          values:
          - kube-dns
          operator: In
  # Connect to the api-server (allow 443 and 6443 for compatibility to different distros)
  - ports:
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
  # Connect to OIDC services outside the cluster
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
